@@ -34,6 +34,7 @@
 void cmd_tonemap_print_help(void)
 {
     mh_msg_fmt_req(
+	    "tonemap -m|--method=schlick94 [--brightness=<b>]\n"
 	    "tonemap -m|--method=tumblinrushmeier99 [-l|--max-absolute-luminance=<l>] "
 	    "[--display-adaptation-level=<d>] [--max-displayable-contrast=<c>]\n"
 	    "tonemap -m|--method=drago03 [-l|--max-absolute-luminance=<l>] [--max-display-luminance=<d>] [--bias=<b>]\n"
@@ -43,6 +44,7 @@ void cmd_tonemap_print_help(void)
 	    "are written to standard output.\n"
 	    "See the original papers for a description of the parameters.\n"
 	    "The default for the maximum absolute luminance is to get it from the file (if specified), or else 150.0.\n"
+	    "The default for schlick94 is b=100.0.\n"
 	    "The defaults for tumblinrushmeier99 are d=100.0, c=70.0.\n"
 	    "The defaults for drago03 are d=200.0, b=0.85.\n"
 	    "The defaults for durand02 are ss=0.3, sl=0.4, bc=2.0. The results of this method need to be gamma corrected!");
@@ -51,10 +53,11 @@ void cmd_tonemap_print_help(void)
 
 int cmd_tonemap(int argc, char *argv[])
 {
-    typedef enum { TM_TR99, TM_DRAGO03, TM_DURAND02 = 0 } method_t;
-    const char *method_names[] = { "tumblinrushmeier99", "drago03", "durand02" , NULL };
+    typedef enum { TM_SCHLICK94, TM_TR99, TM_DRAGO03, TM_DURAND02 = 0 } method_t;
+    const char *method_names[] = { "schlick94", "tumblinrushmeier99", "drago03", "durand02" , NULL };
     mh_option_name_t method = { -1, method_names };
     mh_option_float_t max_abs_lum = { -1.0f, 0.0f, false, FLT_MAX, true };
+    mh_option_float_t schlick94_p = { 100.0f, 1.0f, true, FLT_MAX, true };
     mh_option_float_t tr99_disp_adapt_level = { 100.0f, 0.0f, false, FLT_MAX, true };
     mh_option_float_t tr99_max_contrast = { 70.0f, 0.0f, false, FLT_MAX, true };
     mh_option_float_t drago03_max_disp_lum = { 200.0f, 0.0f, false, FLT_MAX, true };
@@ -66,6 +69,7 @@ int cmd_tonemap(int argc, char *argv[])
     {
 	{ "method",                    'm', MH_OPTION_NAME,  &method,                   true  },
 	{ "max-absolute-luminance",    'l', MH_OPTION_FLOAT, &max_abs_lum,              false },
+	{ "brightness",               '\0', MH_OPTION_FLOAT, &schlick94_p,              false },
 	{ "display-adaptation-level", '\0', MH_OPTION_FLOAT, &tr99_disp_adapt_level,    false },
 	{ "max-displayable-contrast", '\0', MH_OPTION_FLOAT, &tr99_max_contrast,        false },
 	{ "max-display-luminance",    '\0', MH_OPTION_FLOAT, &drago03_max_disp_lum,     false },
@@ -121,7 +125,11 @@ int cmd_tonemap(int argc, char *argv[])
 	    max_abs_lum.value = 150.0f;
 	}
 	tonemapped_frame = cvl_frame_new_tpl(frame);
-	if (method.value == TM_TR99)
+	if (method.value == TM_SCHLICK94)
+	{
+	    cvl_tonemap_schlick94(tonemapped_frame, frame, schlick94_p.value);
+	}
+	else if (method.value == TM_TR99)
 	{
 	    cvl_tonemap_tumblinrushmeier99(tonemapped_frame, frame, max_abs_lum.value,
 		    tr99_disp_adapt_level.value, tr99_max_contrast.value);
