@@ -11,6 +11,8 @@
 	* cvl/cvl_hdr.c, cvl/cvl/cvl_hdr.h,
 	cvl/glsl/hdr/tonemap_schlick94.glsl, cvl/Makefile.am: Add
 	cvl_tonemap_schlick94().
+	* cvtool/cmd_tonemap.c, tests/cmd_tonemap.sh, doc/cvtool.texi: Add the
+	schlick94 method to the tonemap command.
 
 2008-01-08  Martin Lambers <marlam@marlam.de>
 
